Avoid pull request title overflow

--- a/styles/card.less
+++ b/styles/card.less
@@ -36,6 +36,10 @@
 
     .title {
       flex: 1;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      min-width: 0;
     }
   }
 
